2003-05-26  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs
	* Image.cs
			PixelFormat, constructor calls, few methods added

2003-04-26  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs
	* Brush.cs
	* Font.cs
	* Graphics.cs
	* Icon.cs
	* Image.cs
	* Pen.cs
	* Region.cs
	* SolidBrush.cs
	* TextureBrush.cs
	* win32Enums.cs
	* win32Structs.cs
	* win32functions.cs
			first version of Win32 API implementations